# rust-android-examples

.github/workflows/: ci.yml
agdk-cpal/: Cargo.toml  README.md
agdk-cpal/app/: build.gradle
agdk-cpal/app/src/main/: AndroidManifest.xml
agdk-cpal/src/: lib.rs
agdk-eframe/: Cargo.toml  README.md
agdk-eframe/app/: build.gradle
agdk-eframe/app/src/main/: AndroidManifest.xml
agdk-eframe/src/: lib.rs
agdk-egui/: Cargo.toml  README.md
agdk-egui/app/: build.gradle
agdk-egui/app/src/main/: AndroidManifest.xml
agdk-egui/src/: lib.rs
agdk-mainloop/: Cargo.toml  README.md
agdk-mainloop/src/: lib.rs
agdk-oboe/: Cargo.toml  README.md
agdk-oboe/src/: lib.rs
agdk-winit-wgpu/: .gitignore  Cargo.toml  README.md
agdk-winit-wgpu/app/: build.gradle
agdk-winit-wgpu/app/src/main/: AndroidManifest.xml
na-egui/: Cargo.toml
na-egui/app/: build.gradle
na-egui/app/src/main/: AndroidManifest.xml
na-egui/src/: lib.rs
na-mainloop/: Cargo.toml  README.md
na-mainloop/src/: lib.rs
na-openxr-info/: Cargo.toml  README.md  build.rs
na-openxr-info/app/: build.gradle
na-openxr-info/app/src/main/: AndroidManifest.xml
na-openxr-info/src/: lib.rs
na-openxr-wgpu/: Cargo.toml  README.md
na-openxr-wgpu/app/: build.gradle
na-openxr-wgpu/app/src/main/: AndroidManifest.xml
na-openxr-wgpu/src/: lib.rs
na-subclass-jni/: Cargo.toml  README.md
na-subclass-jni/app/: build.gradle
na-subclass-jni/app/src/main/: AndroidManifest.xml
na-subclass-jni/src/: lib.rs
na-winit-glutin/: Cargo.toml  README.md  build.rs
na-winit-glutin/app/: build.gradle
na-winit-glutin/app/src/main/: AndroidManifest.xml
na-winit-glutin/src/: lib.rs
na-winit-wgpu/: Cargo.toml  README.md
na-winit-wgpu/app/: build.gradle
na-winit-wgpu/app/src/main/: AndroidManifest.xml
na-winit-wgpu/src/: lib.rs
