[package]
name = "agdk-eframe"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
winit = { version = "0.28", features = [ "android-game-activity" ] }
wgpu = "0.16.0"
pollster = "0.2"
egui = "0.22"
eframe = { version = "0.22", features = [ "wgpu", "android-game-activity" ] }
egui_demo_lib = "0.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[features]
default = []
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="agdk-eframe"
required-features = [ "desktop" ]
