[package]
name = "agdk-egui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
pollster = "0.2"

egui = { version = "0.22", features = [ "log" ] }
egui-wgpu = { version = "0.22", features = [ "winit" ] }
egui-winit = { version = "0.22", default-features = false, features = [ "android-game-activity" ] }
egui_demo_lib = "0.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.0"

[features]
default = []
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="egui-test"
required-features = [ "desktop" ]

#[patch.crates-io]
#egui = { version = "0.22", path = "../../egui/crates/egui" }
#egui-wgpu = { version = "0.22", path = "../../egui/crates/egui-wgpu" }
#egui-winit = { version = "0.22", path = "../../egui/crates/egui-winit" }
