[package]
name = "na-egui"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
pollster = "0.2"

# For some reason logging within the egui crate isn't working, even with
# the log feature. Maybe the android_logger crate is broken?
egui = "0.22"
egui-wgpu = { version = "0.22", features = [ "winit" ] }
egui-winit = { version = "0.22", default-features = false, features = [ "android-native-activity" ] }
egui_demo_lib = "0.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.0"

[features]
default = []
desktop = []

[lib]
name="na_egui"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="egui-test"
required-features = [ "desktop" ]
