[package]
name = "na-openxr-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
openxr = { version = "0.17" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { version = "0.4", features = ["native-activity"] }

[features]
default = ["linked"]

android = ["linked"]
desktop = ["linked", "openxr/static"]
linked = ["openxr/linked"]

[lib]
name = "main"
crate_type = ["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "test-winit-wgpu"
required-features = ["desktop"]
