[package]
name = "na-openxr-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ash = "0.37"
wgpu-hal = { version = "0.16", features = [ "vulkan" ] }
wgpu = "0.16"
wgpu-types = "0.16"
anyhow = "1"
bitflags = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
openxr = { version = "0.17", features = [ "static" ] }
env_logger = "0.10"
ctrlc = "3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { version = "0.4", features = [ "native-activity" ] }
openxr = { version = "0.17", features = [ "linked" ] }

[features]
default = []
#default = [ "android" ]

#android = [ "openxr/linked" ]
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="test-openxr-wgpu"
required-features = [ "desktop" ]
