[package]
name = "na-subclass-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.11.0"
android-activity = { version = "0.4", features = ["native-activity"] }
ndk-context = "0.1"
ndk = "0.7"
ndk-sys = "0.4"
jni = "0.21"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
#name="na_subclass_jni"
crate_type = ["cdylib"]
